updated the card

--- a/index.html
+++ b/index.html
@@ -49,6 +49,30 @@
                </div>
             </div>
          </div>
+         <div class="row container d-none d-md-block justify-content-center mt-5 py-5">
+            <div class="col-8 mt-5 py-5">
+               <div class="row justify-content-center">
+                  <div class="col-md-4">
+                     <div class="d-flex align-items-center">
+                        <i class="bx bx-check-shield text-primary fs-1"></i>
+                        <p>30 days money back Guarantee</p>
+                     </div>
+                  </div>
+                  <div class="col-md-4">
+                     <div class="d-flex align-items-center">
+                        <i class="bx bx-check-shield text-primary fs-1"></i>
+                        <p>No setup fees 100% hassle-free</p>
+                     </div>
+                  </div>
+                  <div class="col-md-4">
+                     <div class="d-flex align-items-center align-items-center">
+                        <i class="bx bx-money-withdraw text-primary fs-1"></i>
+                        <p>No monthly subscription Pay once and for all</p>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
          <div class="row container justify-content-center mt-5 py-5">
             <div class="col-8 mt-5 py-5">
                <div class="row justify-content-center">
@@ -61,15 +85,13 @@
                   <div class="col-md-4">
                      <div class="d-flex align-items-center">
                         <i class="bx bx-check-shield text-primary fs-1"></i>
-                        <p>No setup fees
-                            100% hassle-free</p>
+                        <p>No setup fees 100% hassle-free</p>
                      </div>
                   </div>
                   <div class="col-md-4">
                      <div class="d-flex align-items-center align-items-center">
                         <i class="bx bx-money-withdraw text-primary fs-1"></i>
-                        <p>No monthly subscription
-                            Pay once and for all</p>
+                        <p>No monthly subscription Pay once and for all</p>
                      </div>
                   </div>
                </div>
