--- a/index.html
+++ b/index.html
@@ -12,12 +12,18 @@
    <body>
       <section>
          <div class="container-fluid position-relative bg-success py-4">
-            <div class="row justify-content-center p-4 p-md-5 mb-4 text-white rounded">
+            <div class="d-none d-md-block row justify-content-center p-4 p-md-5 mb-4 text-white rounded">
                <div class="col-md-10 text-center px-0 pb-5">
                   <h1 class="fw-bold display-4">Simple pricing for your business</h1>
                   <p class="lead fs-4 my-3 pb-5">Plans that are carefully crafted to suit your business.</p>
                </div>
             </div>
+            <div class="d-block d-md-none row justify-content-center p-4 mb-5 pb-5 text-white rounded">
+                <div class="col-md-10 text-center px-0 pb-5 mb-5">
+                   <h5 class="">Simple pricing for your business</h5>
+                   <p class="fs-6 my-3 pb-5">Plans that are carefully crafted to suit your business.</p>
+                </div>
+             </div>
             <!-- card -->
             <div class="col-md-8 col-10 card mb-3 border-0 rounded-3 shadow position-absolute top-100 start-50 translate-middle">
                <div class="row g-0">
@@ -47,51 +53,27 @@
                      </div>
                   </div>
                </div>
-            </div>
-         </div>
-         <div class="row container d-none d-md-block justify-content-center mt-5 py-5">
-            <div class="col-8 mt-5 py-5">
-               <div class="row justify-content-center">
-                  <div class="col-md-4">
-                     <div class="d-flex align-items-center">
-                        <i class="bx bx-check-shield text-primary fs-1"></i>
-                        <p>30 days money back Guarantee</p>
-                     </div>
-                  </div>
-                  <div class="col-md-4">
-                     <div class="d-flex align-items-center">
-                        <i class="bx bx-check-shield text-primary fs-1"></i>
-                        <p>No setup fees 100% hassle-free</p>
-                     </div>
-                  </div>
-                  <div class="col-md-4">
-                     <div class="d-flex align-items-center align-items-center">
-                        <i class="bx bx-money-withdraw text-primary fs-1"></i>
-                        <p>No monthly subscription Pay once and for all</p>
-                     </div>
-                  </div>
-               </div>
-            </div>
-         </div>
-         <div class="row container justify-content-center mt-5 py-5">
-            <div class="col-8 mt-5 py-5">
-               <div class="row justify-content-center">
-                  <div class="col-md-4">
-                     <div class="d-flex align-items-center">
-                        <i class="bx bx-check-shield text-primary fs-1"></i>
-                        <p>30 days money back Guarantee</p>
-                     </div>
-                  </div>
-                  <div class="col-md-4">
-                     <div class="d-flex align-items-center">
-                        <i class="bx bx-check-shield text-primary fs-1"></i>
-                        <p>No setup fees 100% hassle-free</p>
-                     </div>
-                  </div>
-                  <div class="col-md-4">
-                     <div class="d-flex align-items-center align-items-center">
-                        <i class="bx bx-money-withdraw text-primary fs-1"></i>
-                        <p>No monthly subscription Pay once and for all</p>
+               <div class="row justify-content-center position-absolute top-100 start-50 translate-middle pt-5 mt-5">
+                  <div class="col-12">
+                     <div class="row">
+                        <div class="col-md-4">
+                           <div class="d-flex align-items-center">
+                              <i class="bx bx-check-shield text-primary fs-1"></i>
+                              <p>30 days money back Guarantee</p>
+                           </div>
+                        </div>
+                        <div class="col-md-4">
+                           <div class="d-flex align-items-center">
+                              <i class="bx bx-check-shield text-primary fs-1"></i>
+                              <p>No setup fees 100% hassle-free</p>
+                           </div>
+                        </div>
+                        <div class="col-md-4">
+                           <div class="d-flex align-items-center align-items-center">
+                              <i class="bx bx-money-withdraw text-primary fs-1"></i>
+                              <p>No monthly subscription Pay once and for all</p>
+                           </div>
+                        </div>
                      </div>
                   </div>
                </div>
